app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page

  .header {
    font-size: 130px;
    color: $yellow;
    overflow: hidden;
    white-space: nowrap;
    border-right: .15em solid $brown;
    margin: 0 auto;
    letter-spacing: .10em;
    animation:
    typing 1.5s steps(40, end),
    blink-caret .75s step-end infinite;
  }
  @keyframes typing {
    from { width: 0 }
    to { width: 100% }
  }

  /* The typewriter cursor effect */
  @keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: $brown; }
  }

  .button-52 {
    color: rgb(0, 1, 0);
    background:  $yellow;
    border: 2px solid #111;
    border-radius: 10px;
    box-sizing: border-box;
    font-size: 16px;
    height: 80px;
    padding: 0 50px;
    line-height: 80px;
    text-align: center;
    text-decoration: none;

    &:hover {
      color: $yellow;
      background: $brown;
      text-decoration: none;
    }
  }

  .banner {
    background-size: cover;
    background-position: center;
    height: 500px;
}
.goat-image {
    width: 130px;
    height: 130px;
    border-radius: 50%;
    object-fit: cover;
    margin: -60px auto 0;
}
.goat-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    row-gap: 50px;
    margin-top: 60px;
}
.goat-card {
    width: 200px;
    margin-bottom: 20px;
    text-align: center;
    background: $yellow;
    border: 3px solid $brown;
    border-radius: 10px;
    h3 {
      margin-top: 15px;
    }
}
.card-group .card {
    margin-bottom: 10px;
}
.navbar h2 img {
    width: 60px;
    height: 60px;
}

.banner {
  background-size: cover;
  background-position: center;
  height: 100vh;
  max-height: 70%;
}

.card-img-top {
  width: 100%;
  height: 200px;
  object-fit: contain;
}

.card-group {
  .card {
    border: none;
    box-shadow: none;

    .card-body {
      .card-title {
        font-size: 20px;
        color: $brown;
        font-family: "Nunito", "Helvetica", "sans-serif";
        font-weight: bold;
      }

      .card-text {
        font-size: 15px;
        color: $lightbrown;
        font-family:  "Work Sans", "Helvetica", "sans-serif";
        font-weight: 300;
    }
  }
}
}


.goats-rent-container {
  background-color: $lightbrown;
  border: none;
  background:linear-gradient($green, $yellow 90%);
  color: $brown;
}

.goat-name-link {
  font-weight: bold;
  color: $brown;
  text-decoration: none;
  display: inline-block;
  transition: transform 0.3s;

  &:hover {
    text-decoration: none;
    color: $lightbrown;
    transform: scale(1.1);
  }
}

